cms/static/sass/_course-info.scss
.course-updates {
	padding: 30px 40px;

	li {
		padding: 34px 0 42px;
		border-top: 1px solid #cbd1db;		

		&.editing {
			position: relative;
			z-index: 1001;
			padding: 0;
			border-top: none;
			border-radius: 3px;
			background: #fff;

			.post-preview {
				display: none;
			}
		}
	}

	h2 {
		margin-bottom: 18px;
		font-size: 14px;
		font-weight: 700;
		line-height: 30px;
		color: #646464;
		letter-spacing: 1px;
		text-transform: uppercase;
	}

	h3 {
		margin: 34px 0 11px;
		font-size: 16px;
		font-weight: 700;
	}

	.update-contents {
		p {
			font-size: 14px;
			line-height: 18px;
		}

		p + p {
			margin-top: 18px;
		}
	}

	.new-update-button {
		@include blue-button;
		display: block;
		text-align: center;
		padding: 12px 0;
		margin-bottom: 28px;
	}

	.new-update-form {
		@include edit-box;
		margin-bottom: 24px;
		border: none;

		textarea {
			height: 180px;
		}
	}

	.post-actions {
		float: right;

		.edit-button,
		.delete-button{
			float: left;
			@include white-button;
	    padding: 3px 10px 4px;
	    margin-left: 7px;
	    font-size: 12px;
	    font-weight: 400;

	    .edit-icon,
	    .delete-icon {
	      margin-right: 4px;
	    }
		}
	}
}

.course-handouts {
	padding: 15px 20px;

	.new-handout-button {
		@include grey-button;
		display: block;
		text-align: center;
		padding: 12px 0;
		margin-bottom: 28px;
	}

	li {
		margin-bottom: 10px;
		font-size: 14px;
	}

	.new-handout-form {
		@include edit-box;
		margin-bottom: 24px;
	}
}

